app/globals.css
@import "tailwindcss";
@import "tailwindcss/preflight.css" layer(base);



:root {
  --background: #ffffff;
  --foreground: #021433;
}


@font-face {
  font-family: "Science";
  src: url('../fonts/ScienceGothic-VariableFont_CTRS\,slnt\,wdth\,wght.ttf');
  font-weight: 300;
  font-style: normal; 
}





@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
}
@media (prefers-color-scheme: dark) {
  :root {
    --background: #021f33;
    --foreground: #ededed;
  }
}

body {
  background: var(--background);
  color: var(--foreground);
  font-family: "Science", Arial, sans-serif;
}

/* 
.nav{
} */

    @media (width >= 64rem /* 1024px */) {
      
        .typewriter h1{
          overflow-x: hidden;
    overflow-y: visible;
    /* border-right: .15em solid #008827; */
    white-space: nowrap;
    letter-spacing: normal;
    animation:
    typing 3s steps(40, end)
    }
    
    @keyframes typing {
      from { width: 0 }
      to { width: 75% }
    }
    
}

